syntax = "proto3";

package rivet.backend.pkg.game.get;

import "proto/common.proto";
import "proto/backend/game.proto";

message Request {
	repeated rivet.common.Uuid game_ids = 1;
}

message Response {
	repeated rivet.backend.game.Game games = 1;
}
